--- a/_config.yml
+++ b/_config.yml
@@ -176,7 +176,7 @@ defaults:
 #      comments: true
 #      share: true
 #      related: true
-#  # _pages
+  # _pages
 #  - scope:
 #      path: ""
 #      type: pages
@@ -201,15 +201,15 @@ defaults:
       author_profile: true
       share: true
       comments: true
-#  # _portfolio
-#  - scope:
-#      path: ""
-#      type: portfolio
-#    values:
-#      layout: single
-#      author_profile: true
-#      share: true
-#      comment: true
+  # _portfolio
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comment: true
 #  # _talks
 #  - scope:
 #      path: ""
