--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Matteo Attimonelli"
-  avatar           : "profile.png"
+  avatar           : "profilo.jpg"
   bio              : "<b>Ph.D. Student</b><br>National PhD in Artificial Intelligence<br>Polytechnic University of Bari (Italy)"
   location         : "Bari, Italy"
   googlescholar    : "https://scholar.google.com/citations?user=fm4GWqIAAAAJ&hl=it"
