--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   email            :  "matteo.attimonelli@poliba.it"
   researchgate     :  "https://www.researchgate.net/profile/Matteo-Attimonelli"
   github           :  "matt0710"
-  linkedin         :  "https://it.linkedin.com/in/matteo-attimonelli-05011b220"
+  linkedin         :  "matteo-attimonelli-05011b220/"
 
 
 # Reading Files
