--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Matteo Attimonelli"
   avatar           : "profile_new.jpg"
-  bio              : "<b>Ph.D. Student</b><br>National PhD in Artificial Intelligence<br>Polytechnic University of Bari (Italy)"
+  bio              : "<b>Ph.D. Student</b><br>National PhD in Artificial Intelligence<br>Sapienza University of Rome<br>Polytechnic University of Bari (Italy)"
   location         : "Bari, Italy"
   googlescholar    : "https://scholar.google.com/citations?user=fm4GWqIAAAAJ&hl=it"
   email            :  "matteo.attimonelli@poliba.it"
